--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Fri May 26 11:12:36 CST 2017
+#Mon Jun 05 18:10:02 CST 2017
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=jarrisapi.xml,jarrisfile.xml,jeromeapis.xml
 domain=default
-config.resources=jeromeapis.xml
