--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Mon Jun 05 18:10:02 CST 2017
+#Mon Jul 03 11:30:16 CST 2017
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=jarrisapi.xml,jarrisfile.xml,jeromeapis.xml
+config.resources=jarris/Attachment.xml,jarris/Errorhandling.xml,jarris/FileToFile.xml,jarris/IclarityDemo1.xml,jarris/JarrisHttpJson.xml,jarris/LoadHtml.xml,jarris/SoapWebservice.xml,jarris/TestSession.xml,jarris/TransformData.xml,jarris/UploadFile.xml,jarris/UploadToFtp.xml,jarris/WbserviceForRest.xml,jarris/WebFullApp.xml,jerome/JeromeApis.xml
 domain=default
